--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,27 @@
-<?xml version="1.0" encoding="UTF-8"?>
+<!--
+  ~ CVHome Bukkit plugin for Minecraft
+  ~ Copyright (C) 2017-2018,2020  Matt Ciolkosz (https://github.com/mciolkosz)
+  ~ 
+  ~ This program is free software: you can redistribute it and/or modify
+  ~ it under the terms of the GNU General Public License as published by
+  ~ the Free Software Foundation, either version 3 of the License, or
+  ~ (at your option) any later version.
+  ~ 
+  ~ This program is distributed in the hope that it will be useful,
+  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
+  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+  ~ GNU General Public License for more details.
+  ~ 
+  ~ You should have received a copy of the GNU General Public License
+  ~ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+  -->
+
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cubeville</groupId>
   <artifactId>CVHome</artifactId>
   <packaging>jar</packaging>
-  <version>0.1</version>
+  <version>1.1</version>
   <name>CVHome</name>
   <url>http://maven.apache.org</url>
   <properties>
@@ -14,14 +31,14 @@
     <dependency>
       <groupId>org.spigotmc</groupId>
       <artifactId>spigot-api</artifactId>
-      <version>1.12.2-R0.1-SNAPSHOT</version>
+      <version>1.15.2-R0.1-SNAPSHOT</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
     <dependency>
       <groupId>org.cubeville</groupId>
       <artifactId>CVTools</artifactId>
-      <version>0.4</version>
+      <version>0.5</version>
       <type>jar</type>
       <scope>compile</scope>
     </dependency>
